--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -3,7 +3,7 @@ version: 2
 python:
   version: 3.8
   install:
-    - requirements: docs/requirements-dev.txt
+    - requirements: requirements-dev.txt
 
 mkdocs:
   configuration: mkdocs.yml
