--- a/poktbot/config/config_scheme.yaml
+++ b/poktbot/config/config_scheme.yaml
@@ -118,7 +118,7 @@
   - key: "SERVER.rewards_multiplier"
     default_value:
         - date: "28/02/2022 17:41:00"
-          multiplier: 0.0075
+          multiplier: 0.0075303
         - date: "01/01/1970 00:00:00"
           multiplier: 0.0089
 
