Fixed issue with stats graph rendering many lines on same plot. Fixed issue with stats graph backend not allowing multithreading. Added node count to the stats graph as bars. Fixed issue with appending more nodes into the bot dynamically -- now triggers an update immediatelly.

--- a/poktbot/telegram/layouts/admin.yaml
+++ b/poktbot/telegram/layouts/admin.yaml
@@ -20,9 +20,11 @@
         action: "send_xlsx"
 
   menu_nodes:
-    - - caption: "Add node"
+    - - caption: "List nodes"
+        action: "list_nodes"
+      - caption: "Add node"
         action: "add_node"
-    - - caption: "Delete node"
+      - caption: "Delete node"
         action: "delete_node"
 
   menu_users:
